# gui_as_a_tool

./: Cargo.toml  README.md  build.py  build_diagnostic.sh  clean_and_build.sh  websocket_server.js
python-sdk/: agent_hud_v4.py
src-tauri/: Cargo.toml  build_fix.sh  tauri.conf.json
src-tauri/src/: agent_protocol.rs  database.rs  main.rs  models.rs  websocket_server.rs
