[package]
name = "agent-hud-v4"
version = "4.0.0"
description = "Professional Agent HUD - Self-contained desktop application with embedded WebSocket server"
authors = ["Agent HUD Team"]
license = "MIT"
repository = "https://github.com/agent-hud/v4"
edition = "2021"

# Tauri build configuration
[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["shell-open"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
anyhow = "1.0"
thiserror = "1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
