[package]
name = "agent-hud-v5"
version = "5.0.0"
description = "Professional Agent HUD v5 - Self-contained desktop application with rich content"
authors = ["Agent HUD Team"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["rustls-tls"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
